# podcast-transcriber

./: .gitignore  Makefile  README.md  feeds.txt  podcast_sync.py  pyproject.toml  requirements.txt  setup.sh  transcribe.py  transcribe_podcast.py
docs/superpowers/plans/: 2026-04-15-multi-pass-pipeline.md  2026-04-15-podcast-sync-pipeline-integration.md
docs/superpowers/specs/: 2026-04-15-multi-pass-pipeline-design.md  2026-04-15-podcast-sync-pipeline-integration-design.md
src/: audio.py  config.py  downloader.py  feeds.py  output.py  sync_state.py
src/backend/: __init__.py  api_stub.py  local.py
src/pipeline/: __init__.py  config.py  output.py  scorer.py  stages.py
tests/: test_audio.py  test_config.py  test_downloader.py  test_feeds.py  test_output.py  test_pipeline_config.py  test_pipeline_output.py  test_scorer.py  test_stages.py  test_sync_state.py  test_transcriber.py
tests/fixtures/: sample_feed.xml
